yiltc-go-backup/testsuite/negative/move_in_if_branch.yilt
// Move in one if-branch, then use after merge — should error
fn main()
    let a = {"k": 1}
    let x = 1
    if x == 1
        let b = a
    else
        print(a)
    print(a)
